--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,10 +2,10 @@
 
 <%= link_to 'New Post', new_post_path %>
 
-<%= button_tag 'Button', type: 'button', onClick: 'showAlert()'%>
+<%# <%= button_tag 'Button', type: 'button', onClick: 'showAlert()'%>
 
-<button onclick="showAlert()">Click me</button>
-<button id="myButton">Click me</button>
+<%# <button onclick="showAlert()">Click me</button> %>
+<%# <button id="myButton">Click me</button> %>
 
 <table>
     <tr>
