--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,4 +8,14 @@
     <%= @post.caption %>
 </p>
 
+
+<h2> Comments </h2>
+<%= render @post.comments %>
+
+
+<h2> Add a Comment </h2>
+<%= render 'comments/form' %>
+
+
+
 <%= link_to 'Go to Home', posts_path %>
