--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,29 +1,16 @@
-<h1> All Posts </h1>
+<h1> Posts </h1>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path, class: "btn btn-primary" %>
+
+<br><br>
+
+<%= render 'post' %>
+
+
+
 
 <%# <%= button_tag 'Button', type: 'button', onClick: 'showAlert()'%>
 
 <%# <button onclick="showAlert()">Click me</button> %>
 <%# <button id="myButton">Click me</button> %>
 
-<table>
-    <tr>
-        <th> Title </th>
-        <th> Caption </th>
-        <th colspan = "3" >  </th>
-    </tr>
-
-    <% @posts.each do |post| %>
-        <tr>
-            <th><%= post.title %></th>
-            <th><%= post.title %></th>
-            <th><%= link_to 'Show', post_path(post) %></th>
-            <th><%= link_to 'Edit', edit_post_path(post) %></th>
-            <th><%= link_to 'Delete', post_path(post),
-                                        method: :delete,
-                                        data: { confirm: 'Are you sure?' } %></th>
-        </tr>
-    <% end %>
-
-</table>
