--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,11 @@
 <h1> Posts </h1>
-
 <%= link_to 'New Post', new_post_path, class: "btn btn-primary" %>
 
-<br><br>
+<% if user_signed_in? %>
+    <br><br>
 
-<%= render 'post' %>
+    <%= render 'post' %>
+<% end %>
 
 
 
