--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,18 +14,18 @@
     <div class="navbar-menu">
       <ul class="navbar-items">
         <li><a href="/">Home</a></li>
-        <%# <% if user_signed_in? %> 
+        <% if user_signed_in? %> 
           <li>
             <%= link_to 'Profile' , posts_path %> 
           </li>
-          <%# <li>
-            <%= link_to 'Sign Out' %> 
-          </li>
-        <%# <% else %>
           <li>
-            <%= link_to 'Sign In'  %> 
+            <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> 
           </li>
-        <%# <% end %>
+        <% else %>
+          <li>
+            <%= link_to 'Sign In', new_user_session_path  %> 
+          </li>
+        <% end %>
         <!-- Add more navbar items as needed -->
       </ul>
     </div>
